--- a/README
+++ b/README
@@ -1,16 +1,16 @@
+# C++ links
+
+<a href=https://en.cppreference.com/w/>C++ reference</a>
+<br>
+<a href=https://isocpp.org/>News, Status & Discussion about Standard C++</a>
+<br>
+<a href https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md>
+<br>
+<a href=https://github.com/mortennobel/cpp-cheatsheet>C++ cheat sheet</a>
 
 
-https://en.cppreference.com/w/
-
-https://isocpp.org/
-https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md
-
-https://github.com/mortennobel/cpp-cheatsheet
-
-
-https://www.learncpp.com/
-https://www.freecodecamp.org/news/tag/c-2/
-
+<a href=https://www.learncpp.com/>Learn C++</a>
+<br>
 https://exercism.org/tracks/cpp
 https://edabit.com/challenges/cpp
 https://www.hackerrank.com/domains/cpp
